# cortex-x

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MIGRATIONS.md  NOTICE  OPERATOR_HANDOVER.md  README.md  SECURITY.md  install.ps1  install.sh  module.yaml  package-lock.json  package.json  stryker.conf.json
.claude-plugin/: README.md  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
agents/: README.md  acceptance-auditor.md  blind-hunter.md  correctness-auditor.md  cortex-thinker.md  edge-case-hunter.md  planner.md  security-auditor.md  ssot-enforcer.md  synthesizer.md
config/: evolve.yaml  research.yaml  ship-ready-denylist.local.txt.example  ship-ready-denylist.txt
cortex/: atlas-2026-06-01.md  capabilities.json  capabilities.md  capability-tree-2026-06-01.md  goal-autonomous-build-2026-05-28.md  goal-cron-test-backfill.md  operator-recap-2026-06-03.md  r2-verdict.json  recommendations.md  sprint-2-3-1-plan.md  sprint-2-3-1-r2-summary.md  sprint-2-44-plan.md  sprint-2-44-probe-verdict.md  sprint-2-44-r2-summary.md  sprint-2-45-plan.md  sprint-2-45-r2-summary.md  sprint-2-46-1-plan.md  sprint-2-46-1-r2-summary.md  sprint-2-46-2-plan.md  sprint-2-46-2-r2-summary.md  sprint-2-46-plan.md  sprint-2-46-r2-summary.md
detectors/: README.md  dep-update-patch.cjs  detect-profile.cjs  detect-sister-env.cjs  detect-stage.cjs  detect-user-identity.cjs  doc-drift.cjs  evolve-daily.cjs  evolve-weekly.cjs  flaky-test-repair.cjs  lint-fix.cjs  (+9 more)
tests/fixtures/tauri-desktop-mini/src-tauri/: Cargo.toml  tauri.conf.json
(+578 files in other folders)
